css/style.css
* {
    margin: 0;
    padding: 0;
}

body {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.homepage__text {
    height: 88vh;
    display: flex;
    margin-top: 0vh;
    flex-direction: column;
    align-items: center;
    color: #333;
}

.hompage__name {
    margin-top: -.4vw;
}

.myriad-pro-condensed {
    font-family: "myriad-pro-condensed", sans-serif;
    font-style: normal;
    font-weight: 700;
}

.roboto {
    font-family: 'roboto', sans-serif;
}

canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.ballGif {
    /*display: none;*/
    margin-top: 15vh;
}

.ballGif--img {
    /*width: calc(100% - 5vw);*/
    margin: auto;
    width: calc(220px + 10vw);
}

.progress {
    margin-top: 40vh;
    /*margin-left: 20vw;*/
    position: fixed;
}

.nav {
    z-index: 1000001;
    user-select: none;
    visibility: inherit;
    opacity: 1;
}

.nav--left {
    left: 6vw;
}

.nav--transform {
    z-index: 1000001;
    position: absolute;
    -webkit-transform: rotateZ(-90deg) translateX(-50%);
    transform: rotateZ(-90deg) translateX(-50%);
    -webkit-transform-origin: 0 50%;
    -ms-transform-origin: 0 50%;
    transform-origin: 0 50%;
    top: 48%;
}

.nav--right {
    right: 6vw;
}

.nav--transformRight {
    z-index: 1000001;
    position: absolute;
    -webkit-transform: rotateZ(90deg) translateX(50%);
    transform: rotateZ(90deg) translateX(50%);
    -webkit-transform-origin: 100% 50%;
    -ms-transform-origin: 100% 50%;
    transform-origin: 100% 50%;
    top: 48%;
}

.nav__about-wrapper, .nav__mail-wrapper, .nav__works-wrapper {
    display: inline-block;
    padding: 10px;
}

.nav__about, .nav__mail, .nav__works {
    color: #333;
    opacity: .5;
    white-space: nowrap;
    cursor: pointer;
    -webkit-transition: opacity .3s;
    transition: opacity .3s;
}

.nav__about:hover, .nav__mail:hover, .nav__works:hover {
    opacity: 1;
}

.nav a {
    text-decoration: none!important;
    color: #333;
}

.nav__links {
    letter-spacing: 1.78px;
    font-size: 20px;
}

h3, p {
    text-rendering: geometricPrecision;
}

.bottom__link {
    margin-top: -40px;
}

.bottom__link__name {
    display: flex;
    flex-direction: column;
    align-items: center;
}


.bottom__link__line {
    position: absolute;
    bottom: -28px;
    right: 0;
    width: 44px;
    height: calc(65px + 4vh);
    left: 50%;
    -webkit-transform: translateX(-50%) scaleX(.5) scaleY(.5);
    -ms-transform: translateX(-50%) scaleX(.5) scaleY(.5);
    transform: translateX(-50%) scaleX(.5) scaleY(.5);
    cursor: pointer;
    z-index: 99999;
    /*display: none; turn on when you move down on the page*/
    display: block;
}


.bottom__link__line .arrowdown-trail {
    height: 115px;
    width: 2px;
    text-align: center;
    background-color: #828282;
    position: absolute;
    -webkit-transform-origin: 50% 0;
    -ms-transform-origin: 50% 0;
    transform-origin: 50% 0;
    top: 0;
    cursor: pointer;
    transform: matrix(1, 0, 0, 1, 0, 0);
    /*transform: matrix(1, 0, 0, 1, 0, 0);*/
}

.inProgress {
    color: #A2A2A2;
}

.fluid-type14-20 {
    font-size: 14px;
}

.fluid-type30-60 {
    font-size: 29.6px;
}

@media screen and (min-height: 500px) {
    .homepage__name {
        margin-top: -30px;
    }
}

@media screen and (min-width: 320px) {
    .fluid-type14-20 {
        font-size: calc( 14px + (20 - 14) * ( (100vw - 320px) / ( 1440 - 320)));
    }
    .fluid-type30-60 {
        font-size: calc( 29.6px + (60 - 29.6) * ( (100vw - 320px) / ( 1440 - 320)));
    }
}

@media screen and (min-width: 1440px) {
    .fluid-type14-20 {
        font-size: 20px;
    }
    .fluid-type30-60 {
        font-size: 60px;
    }
}

